--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Big spaghetti
+Java program written for SFWR ENG 2XB3 course that predicts a Kickstarter campaign's likelihood of success. Developed by Cameron Dufault, Victor Vezina, Mahnoor Tariq, and Lewis Rafuse.  
